# 40-Day-Python

Day-1/.ipynb_checkpoints/: Day-1-checkpoint.ipynb
Day-10/: Day-10.ipynb
Day-11/: Day-11.ipynb
Day-12/: Day-12_Tensor_BasicFunctions.ipynb
Day-13/: Day-13_Basic_Python_List.ipynb
Day-14/: Day-14_Numpy_Pytorch_Tensorflow_Transpose_Summation.ipynb
Day-15/: Day-15_Basic_Python_List.ipynb
Day-16/: app.py  factorial.py
Day-17/: Day-17_Basic_Python_List.ipynb
Day-18/: Day-18_List_Comprehension_Tuple.ipynb
Day-19/: Day-19_File.ipynb
Day-20/: Day-20_Work_With_Text_Data.ipynb
Day-21/: Day-21_File.ipynb
Day-22/: Day-22_While_Loop.ipynb
Day-23/: Day-23-tensor-arrange.ipynb
Day-26/: Day-26_Image_Data.ipynb
Day-27/: Day-27_Text_Data.ipynb
Day-28/: Day-28_Text_Data.ipynb
Day-29/: Day-29_Sound_Data.ipynb
Day-3/: Day-3.ipynb
Day-30/factorial-aivn/: pyproject.toml
Day-30/factorial-aivn/factorial_aivn/: app.py  factorial.py
Day-30/factorial-aivn/tests/: factorial_test.py
Day-34/: Day-34_Image_Data.ipynb
Day-35/: Day-35.ipynb
Day-35/.ipynb_checkpoints/: Day-35_SQLite-checkpoint.ipynb
Day-36/: Day-36.ipynb
Day-36/.ipynb_checkpoints/: Day-36_SQLite-checkpoint.ipynb
Day-37/: Day-37.ipynb  Day-37_PDF.ipynb
Day-38/: Day-38.ipynb
Day-39/: Day-39.py
Day-4/: Day-4.ipynb
Day-5/: Day-5.ipynb
Day-6/: Day-6.ipynb
Day-7/: Day-7.ipynb
Day-8/: Day-8.ipynb
Day-9/: Day-9.ipynb
