[tool.poetry]
name = "factorial-aivn"
version = "0.1.0"
description = ""
authors = ["chaupmbn <chaupmbn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
streamlit = "^1.33.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[[tool.poetry.source]]
name = "foo"
url = "https://pypi.example.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
